# daily-market-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  positions.example.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_signal_notes.py  0003_wechat_cover_images.py
config/: config.example.yaml
docs/: ADD_MONITOR.md  ALERTS.md  ARCHITECTURE.md  DATA_LAYER_DESIGN.md  MIGRATION.md  OPENCLAW_USAGE.md  PROJECT_REVIEW_2026-07-11.md  RESEARCH_OS_UPGRADE_PLAN.md  SIGNAL_AND_RESEARCH_OS_EVAL.md  WEB_API.md  WEB_OPERATIONS.md  WEB_UI_DOCKER_PLAN.md  concepts.md  wechat_push_system_design.md
docs/data-sources/: free-apis-catalog-v2.md  free-apis-catalog.md  gap-analysis-2026-07-10.md
docs/iterations/: DS1-us-treasury.md  README.md  W2-ah-premium.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
launchd/: README.md  com.market-monitor.evening.plist  com.market-monitor.hk-market.plist  com.market-monitor.hk-shock.plist  com.market-monitor.monthly.plist  com.market-monitor.morning.plist  com.market-monitor.price-alert.plist  com.market-monitor.review.plist  com.market-monitor.shock.plist  com.market-monitor.stabilize.plist  com.market-monitor.us-market.plist  com.market-monitor.voice.plist
market_monitor/: __init__.py  cli.py
scripts/: backup_db.py  cigar_butt_weekly.py  docker_entrypoint.sh  gen_bloomberg_cover.py  gen_launchd.py  gen_voice_cover.py  get_wechat_covers.py  health_check.py  install.sh  migrate.sh  publish_bloomberg_wechat.sh  publish_multi_wechat.sh  restore_db.py  sync_push_log.py  uninstall.sh  verify.sh  wechat_cover_manager.py
sql/: README.md  wechat_cover_images_init.sql
tests/: test_data_source.py  test_hk_shock_signals.py  test_operability.py  test_price_alert_signals.py  test_pulse_signals.py  test_report_config.py  test_research_os_phase4_6.py  test_runtime_hardening.py  test_shanghai_watch.py  test_shanghai_watch_signals.py  test_shock_signals.py  test_signal_cli.py  test_sql_json_interfaces.py  test_sqlite_backup.py  test_web_api.py
(+124 files in other folders)
