[project]
name = "market-monitor"
version = "0.1.0"
description = "Global market monitoring system with A-share, HK, US market coverage"
authors = [{name = "Steven"}]
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "requests>=2.31",
    "pandas>=2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
analytics = [
    "akshare>=1.14",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
market-monitor = "market_monitor.cli:main"
market-monitor-web = "market_monitor.api.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["market_monitor*"]
